--- a/requisition_management.html
+++ b/requisition_management.html
@@ -256,6 +256,8 @@
                         <!--                        </form>-->
                         <!--                    </div>&lt;!&ndash;/card-block&ndash;&gt;-->
                     </div>
+
+
                     <!-- /form card login -->
                 </div>
             </div>
@@ -308,110 +310,66 @@
 
                 <div class="scrollcard">
                     <div class="card border-primary shadow-lg" style="width: 18rem;">
-                        <h3 class="card-header text-white bg-primary">Project 2
+                        <h3 class="card-header text-white bg-primary">Requisition 2
 
                         </h3>
                         <div class="card-body  bg-light scroll">
 
                             <ul class="list-group list-group">
-                                <li class="list-group-item"> Project Id : 2001</li>
-                                <li class="list-group-item">Client Name : munna</li>
-                                <li class="list-group-item">Requisition: Enable</li>
-                                <li class="list-group-item">Assigned Department : Civil</li>
-                                <li class="list-group-item">Assigned Team : A</li>
-                                <li class="list-group-item">Managerial Approval: Approved</li>
-                                <li class="list-group-item"> Administrative Approval : Disapproved</li>
-                                <li class="list-group-item"> Accounts Approval : Disapproved</li>
-                                <li class="list-group-item">Project Budget : 20,000</li>
-                                <li class="list-group-item">Start date : 20/08/2019</li>
-                                <li class="list-group-item">Expected Completion Date : 15/07/2020</li>
-                                <li class="list-group-item">Completion Date : 28/07/2020</li>
-                                <li class="list-group-item">Project Status : Running</li>
-                            </ul>
-
-                        </div>
-                        <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
-                    </div>
-                </div>
-
-
-                <div class="scrollcard">
-                    <div class="card border-primary shadow-lg" style="width: 18rem;">
-                        <h3 class="card-header text-white bg-primary">Project 3
-
-                        </h3>
-                        <div class="card-body  bg-light scroll">
-
-                            <ul class="list-group list-group">
-                                <li class="list-group-item"> Project Id : 2001</li>
-                                <li class="list-group-item">Client Name : munna</li>
-                                <li class="list-group-item">Requisition: Enable</li>
-                                <li class="list-group-item">Assigned Department : Civil</li>
-                                <li class="list-group-item">Assigned Team : A</li>
-                                <li class="list-group-item">Managerial Approval: Approved</li>
-                                <li class="list-group-item"> Administrative Approval : Disapproved</li>
-                                <li class="list-group-item"> Accounts Approval : Disapproved</li>
-                                <li class="list-group-item">Project Budget : 20,000</li>
-                                <li class="list-group-item">Start date : 20/08/2019</li>
-                                <li class="list-group-item">Expected Completion Date : 15/07/2020</li>
-                                <li class="list-group-item">Completion Date : 28/07/2020</li>
-                                <li class="list-group-item">Project Status : Running</li>
-                            </ul>
-
-                        </div>
-                        <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
-                    </div>
-                </div>
-
-
-                <div class="scrollcard">
-                    <div class="card border-primary shadow-lg" style="width: 18rem;">
-                        <h3 class="card-header text-white bg-primary">Project 4
-
-                        </h3>
-                        <div class="card-body  bg-light scroll">
-
-                            <ul class="list-group list-group">
-                                <li class="list-group-item"> Project Id : 2001</li>
-                                <li class="list-group-item">Client Name : munna</li>
-                                <li class="list-group-item">Requisition: Enable</li>
-                                <li class="list-group-item">Assigned Department : Civil</li>
-                                <li class="list-group-item">Assigned Team : A</li>
-                                <li class="list-group-item">Managerial Approval: Approved</li>
-                                <li class="list-group-item"> Administrative Approval : Disapproved</li>
-                                <li class="list-group-item"> Accounts Approval : Disapproved</li>
-                                <li class="list-group-item">Project Budget : 20,000</li>
-                                <li class="list-group-item">Start date : 20/08/2019</li>
-                                <li class="list-group-item">Expected Completion Date : 15/07/2020</li>
-                                <li class="list-group-item">Completion Date : 28/07/2020</li>
-                                <li class="list-group-item">Project Status : Running</li>
+                                <li class="list-group-item"> Site : Site01</li>
+                                <li class="list-group-item">Submitted By: Akib</li>
+                                <li class="list-group-item">
+                                    Prepared by: Kamal</li>
+                                <li class="list-group-item">Working Date: 20/05/2019</li>
+                                <li class="list-group-item">Requisition Type: Prerequisite</li>
+                                <li class="list-group-item">Payment Date: 08/09/2019</li>
+                                <li class="list-group-item"> Payment Type: MobilRee Banking</li>
+                                <li class="list-group-item"> Payment Remarks: orem ipsum dolor</li>
+                                <li class="list-group-item">Contact No:01245835447</li>
+                                <li class="list-group-item">Description: lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li class="list-group-item">Purpose:porttitor </li>
+                                <li class="list-group-item">Requisition: Requisition01</li>
+                                <li class="list-group-item">Item: Item01</li>
+                                <li class="list-group-item">Unit: 20</li>
+                                <li class="list-group-item">Quantity: 100</li>
+                                <li class="list-group-item">Price Per Unit: 20</li>
+                                <li class="list-group-item">Total Price: 500</li>
+                                <li class="list-group-item">Remarks: lorem ipsum dolor sit amet</li>
                             </ul>
                         </div>
                         <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
                     </div>
                 </div>
 
+
+
                 <div class="scrollcard">
                     <div class="card border-primary shadow-lg" style="width: 18rem;">
-                        <h3 class="card-header text-white bg-primary">Project 5
+                        <h3 class="card-header text-white bg-primary">Requisition 3
 
                         </h3>
                         <div class="card-body  bg-light scroll">
 
                             <ul class="list-group list-group">
-                                <li class="list-group-item"> Project Id : 2001</li>
-                                <li class="list-group-item">Client Name : munna</li>
-                                <li class="list-group-item">Requisition: Enable</li>
-                                <li class="list-group-item">Assigned Department : Civil</li>
-                                <li class="list-group-item">Assigned Team : A</li>
-                                <li class="list-group-item">Managerial Approval: Approved</li>
-                                <li class="list-group-item"> Administrative Approval : Disapproved</li>
-                                <li class="list-group-item"> Accounts Approval : Disapproved</li>
-                                <li class="list-group-item">Project Budget : 20,000</li>
-                                <li class="list-group-item">Start date : 20/08/2019</li>
-                                <li class="list-group-item">Expected Completion Date : 15/07/2020</li>
-                                <li class="list-group-item">Completion Date : 28/07/2020</li>
-                                <li class="list-group-item">Project Status : Running</li>
+                                <li class="list-group-item"> Site : Site01</li>
+                                <li class="list-group-item">Submitted By: Akib</li>
+                                <li class="list-group-item">
+                                    Prepared by: Kamal</li>
+                                <li class="list-group-item">Working Date: 20/05/2019</li>
+                                <li class="list-group-item">Requisition Type: Prerequisite</li>
+                                <li class="list-group-item">Payment Date: 08/09/2019</li>
+                                <li class="list-group-item"> Payment Type: MobilRee Banking</li>
+                                <li class="list-group-item"> Payment Remarks: orem ipsum dolor</li>
+                                <li class="list-group-item">Contact No:01245835447</li>
+                                <li class="list-group-item">Description: lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li class="list-group-item">Purpose:porttitor </li>
+                                <li class="list-group-item">Requisition: Requisition01</li>
+                                <li class="list-group-item">Item: Item01</li>
+                                <li class="list-group-item">Unit: 20</li>
+                                <li class="list-group-item">Quantity: 100</li>
+                                <li class="list-group-item">Price Per Unit: 20</li>
+                                <li class="list-group-item">Total Price: 500</li>
+                                <li class="list-group-item">Remarks: lorem ipsum dolor sit amet</li>
                             </ul>
                         </div>
                         <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
@@ -421,30 +379,105 @@
 
                 <div class="scrollcard">
                     <div class="card border-primary shadow-lg" style="width: 18rem;">
-                        <h3 class="card-header text-white bg-primary">Project 6
+                        <h3 class="card-header text-white bg-primary">Requisition 4
 
                         </h3>
                         <div class="card-body  bg-light scroll">
 
                             <ul class="list-group list-group">
-                                <li class="list-group-item"> Project Id : 2001</li>
-                                <li class="list-group-item">Client Name : munna</li>
-                                <li class="list-group-item">Requisition: Enable</li>
-                                <li class="list-group-item">Assigned Department : Civil</li>
-                                <li class="list-group-item">Assigned Team : A</li>
-                                <li class="list-group-item">Managerial Approval: Approved</li>
-                                <li class="list-group-item"> Administrative Approval : Disapproved</li>
-                                <li class="list-group-item"> Accounts Approval : Disapproved</li>
-                                <li class="list-group-item">Project Budget : 20,000</li>
-                                <li class="list-group-item">Start date : 20/08/2019</li>
-                                <li class="list-group-item">Expected Completion Date : 15/07/2020</li>
-                                <li class="list-group-item">Completion Date : 28/07/2020</li>
-                                <li class="list-group-item">Project Status : Running</li>
+                                <li class="list-group-item"> Site : Site01</li>
+                                <li class="list-group-item">Submitted By: Akib</li>
+                                <li class="list-group-item">
+                                    Prepared by: Kamal</li>
+                                <li class="list-group-item">Working Date: 20/05/2019</li>
+                                <li class="list-group-item">Requisition Type: Prerequisite</li>
+                                <li class="list-group-item">Payment Date: 08/09/2019</li>
+                                <li class="list-group-item"> Payment Type: MobilRee Banking</li>
+                                <li class="list-group-item"> Payment Remarks: orem ipsum dolor</li>
+                                <li class="list-group-item">Contact No:01245835447</li>
+                                <li class="list-group-item">Description: lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li class="list-group-item">Purpose:porttitor </li>
+                                <li class="list-group-item">Requisition: Requisition01</li>
+                                <li class="list-group-item">Item: Item01</li>
+                                <li class="list-group-item">Unit: 20</li>
+                                <li class="list-group-item">Quantity: 100</li>
+                                <li class="list-group-item">Price Per Unit: 20</li>
+                                <li class="list-group-item">Total Price: 500</li>
+                                <li class="list-group-item">Remarks: lorem ipsum dolor sit amet</li>
                             </ul>
                         </div>
                         <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
                     </div>
                 </div>
+
+
+                <div class="scrollcard">
+                    <div class="card border-primary shadow-lg" style="width: 18rem;">
+                        <h3 class="card-header text-white bg-primary">Requisition 5
+
+                        </h3>
+                        <div class="card-body  bg-light scroll">
+
+                            <ul class="list-group list-group">
+                                <li class="list-group-item"> Site : Site01</li>
+                                <li class="list-group-item">Submitted By: Akib</li>
+                                <li class="list-group-item">
+                                    Prepared by: Kamal</li>
+                                <li class="list-group-item">Working Date: 20/05/2019</li>
+                                <li class="list-group-item">Requisition Type: Prerequisite</li>
+                                <li class="list-group-item">Payment Date: 08/09/2019</li>
+                                <li class="list-group-item"> Payment Type: MobilRee Banking</li>
+                                <li class="list-group-item"> Payment Remarks: orem ipsum dolor</li>
+                                <li class="list-group-item">Contact No:01245835447</li>
+                                <li class="list-group-item">Description: lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li class="list-group-item">Purpose:porttitor </li>
+                                <li class="list-group-item">Requisition: Requisition01</li>
+                                <li class="list-group-item">Item: Item01</li>
+                                <li class="list-group-item">Unit: 20</li>
+                                <li class="list-group-item">Quantity: 100</li>
+                                <li class="list-group-item">Price Per Unit: 20</li>
+                                <li class="list-group-item">Total Price: 500</li>
+                                <li class="list-group-item">Remarks: lorem ipsum dolor sit amet</li>
+                            </ul>
+                        </div>
+                        <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
+                    </div>
+                </div>
+
+
+                <div class="scrollcard">
+                    <div class="card border-primary shadow-lg" style="width: 18rem;">
+                        <h3 class="card-header text-white bg-primary">Requisition 6
+
+                        </h3>
+                        <div class="card-body  bg-light scroll">
+
+                            <ul class="list-group list-group">
+                                <li class="list-group-item"> Site : Site01</li>
+                                <li class="list-group-item">Submitted By: Akib</li>
+                                <li class="list-group-item">
+                                    Prepared by: Kamal</li>
+                                <li class="list-group-item">Working Date: 20/05/2019</li>
+                                <li class="list-group-item">Requisition Type: Prerequisite</li>
+                                <li class="list-group-item">Payment Date: 08/09/2019</li>
+                                <li class="list-group-item"> Payment Type: MobilRee Banking</li>
+                                <li class="list-group-item"> Payment Remarks: orem ipsum dolor</li>
+                                <li class="list-group-item">Contact No:01245835447</li>
+                                <li class="list-group-item">Description: lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li class="list-group-item">Purpose:porttitor </li>
+                                <li class="list-group-item">Requisition: Requisition01</li>
+                                <li class="list-group-item">Item: Item01</li>
+                                <li class="list-group-item">Unit: 20</li>
+                                <li class="list-group-item">Quantity: 100</li>
+                                <li class="list-group-item">Price Per Unit: 20</li>
+                                <li class="list-group-item">Total Price: 500</li>
+                                <li class="list-group-item">Remarks: lorem ipsum dolor sit amet</li>
+                            </ul>
+                        </div>
+                        <button data-toggle="modal" data-target="#modalAdd" class="btn btn-success">Edit</button>
+                    </div>
+                </div>
+
             </div>
 
 
